Added Description and Authors

--- a/pol_pred.ipynb
+++ b/pol_pred.ipynb
@@ -3,8 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "ProgramaDocumentado.ipynb",
+      "name": "pol_pred.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,11 +26,76 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0PR95hWCVzB1",
+        "colab_type": "text"
+      },
+      "source": [
+        "Pollution analysis program:\n",
+        "\n",
+        "By: David Ramirez Colula(1), Jesus Alberto Gonzalez Morales(1), Héctor Cruz Rojas(1) and Luis Alberto Chávez Tress(1)\n",
+        "\n",
+        "a00818988@itesm.mx\n",
+        "\n",
+        "Under the advise of Daniel Astudillo(1) and Luis Garza(1)\n",
+        "\n",
+        "(1) Tecnológico de Monterrey, Escuela de Ingeniería y Ciencias\n",
+        "\n",
+        "This program uses a neural network for interpolating the PM10 pollution measurements in Monterrey, Mexico from historical data of the seven official measurement stations in the city, with parameters: Air pressure, Relative Humidity, Temperature, Wind Speed and distance between stations\n",
+        "\n",
+        "Instructions:\n",
+        "\n",
+        "Run the cells under the 'Required' section\n",
+        "\n",
+        "For training a new model, run the cells under the 'Model Training' Section.\n",
+        "For using the model that was already trained, only run the cells under the 'Required' and 'Pretrained Model' Sections\n",
+        "\n",
+        "*For map visualization, it is required a Mapbox access token, which can be obtained at https://account.mapbox.com/\n",
+        "\n",
+        "This code was created and optimized in the Google Colab Framework and can be found at the github repository: https://github.com/drcolula/mtypollution "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7u305zgNIL70",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Mapbox Access Token"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PJltb6V9JlsM",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#For running maps, it is required an access token from mapbox at https://account.mapbox.com/ Paste the token in the next line between the ''\n",
+        "mapboxtoken=''"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0DEwId67HUvL",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Required"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Tvg6m9_03QqU",
         "colab_type": "code",
-        "outputId": "f674a4c3-5608-4110-c480-d6cd75717ddc",
+        "outputId": "e094f490-09c9-4609-9636-a7ba7a779377",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -37,7 +103,6 @@
       },
       "source": [
         "#Import libraries\n",
-        "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "import geopy.distance\n",
         "import pandas as pd\n",
@@ -49,16 +114,12 @@
         "import keras\n",
         "from keras.models import Sequential, load_model\n",
         "from keras.layers import Dense\n",
-        "from keras.wrappers.scikit_learn import KerasRegressor\n",
         "\n",
         "import sklearn\n",
         "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
-        "from sklearn.model_selection import cross_val_score, KFold, StratifiedKFold, train_test_split \n",
-        "from sklearn.pipeline import Pipeline\n",
-        "\n",
-        "pd.set_option('display.max_rows', 100)"
+        "from sklearn.model_selection import cross_val_score, train_test_split"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,7 +151,7 @@
       "metadata": {
         "id": "qZSLmE7l3XsO",
         "colab_type": "code",
-        "outputId": "fc77c528-2117-40fa-e095-7b86ac61cd01",
+        "outputId": "099725dd-1e2f-48d0-c3b3-e5f87bcaae28",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -100,17 +161,17 @@
         "#Clone github repository\n",
         "!git clone https://github.com/drcolula/mtypollution.git"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'mtypollution'...\n",
-            "remote: Enumerating objects: 16, done.\u001b[K\n",
-            "remote: Counting objects: 100% (16/16), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (15/15), done.\u001b[K\n",
-            "remote: Total 16 (delta 2), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (16/16), done.\n"
+            "remote: Enumerating objects: 25, done.\u001b[K\n",
+            "remote: Counting objects: 100% (25/25), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (24/24), done.\u001b[K\n",
+            "remote: Total 25 (delta 6), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (25/25), done.\n"
           ],
           "name": "stdout"
         }
@@ -202,6 +263,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2WhCrVaNHjLf",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Model Training"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "k50YOeLo3YWd",
@@ -242,6 +313,22 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "6Gozfr1PZgUv",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#Compute distance between target station and stations\n",
+        "for i in range(1,9):\n",
+        "    dc['ds'+str(i)+'_x']=dc.Target.apply(lambda x: dist(i,int(x[1]))[0])\n",
+        "    dc['ds'+str(i)+'_y']=dc.Target.apply(lambda x: dist(i,int(x[1]))[1])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "9M6r63k03Yco",
         "colab_type": "code",
         "outputId": "67fd9ac5-a838-4387-f086-7329f468103d",
@@ -256,7 +343,7 @@
         "for i in range(0,56046):\n",
         "    db['PM10obj'].iloc[i]=ds[db.Target.iloc[i]].loc[db.index[i]].PM10"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,7 +368,7 @@
         "colab": {}
       },
       "source": [
-        "#Save and Drop name of target station\n",
+        "#Export and Drop name of target station\n",
         "db['Target'].to_csv('tables/targets_training.csv')\n",
         "db.drop('Target',axis=1,inplace=True)"
       ],
@@ -311,7 +398,7 @@
         "colab": {}
       },
       "source": [
-        "#Save training dataset\n",
+        "#Export training dataset\n",
         "dsgF.to_csv('tables/dsgF.csv')\n",
         "dobjF.to_csv('tables/dobjF.csv')"
       ],
@@ -411,12 +498,21 @@
         "colab": {}
       },
       "source": [
-        "%%time\n",
         "#Model Training\n",
         "modevalnn5(dsgF,dobjF,'ModGNormF128')"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CftF28cCHpzj",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Pretrained Model"
+      ]
     },
     {
       "cell_type": "code",
@@ -477,33 +573,44 @@
       "metadata": {
         "id": "GRBh-sm93Yxw",
         "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "%%time\n",
-        "#Create grid\n",
-        "w=300\n",
-        "h=150\n",
-        "(cc,co)=meshing(w,h)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "LL4TbjkC3Yz5",
-        "colab_type": "code",
-        "outputId": "970cdbff-53fd-49b6-f640-d8e41d4e301b",
+        "outputId": "d0c87be9-2e58-475d-b567-fc1028d79e44",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
         }
       },
       "source": [
-        "%%time\n",
+        "#Create grid\n",
+        "w=300\n",
+        "h=150\n",
+        "(cc,co)=meshing(w,h)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "CPU times: user 3min 6s, sys: 33.6 ms, total: 3min 6s\n",
+            "Wall time: 3min 6s\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LL4TbjkC3Yz5",
+        "colab_type": "code",
+        "outputId": "735039da-c163-462e-9970-48225da03f4f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
+      },
+      "source": [
         "#Predict points in the mesh for the n first hours and save the result\n",
-        "n=10\n",
+        "n=10000\n",
         "\n",
         "mod=load_model('mtypollution/mods_ModGNormF128.hdf5')\n",
         "    \n",
@@ -515,13 +622,13 @@
         "    co['hr']=list(dc.index)[i]\n",
         "    co.to_csv('maps/' + str(dc.index[i]).replace(':','-') + '.csv',index=False)"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "CPU times: user 35.8 s, sys: 1.82 s, total: 37.6 s\n",
-            "Wall time: 34.6 s\n"
+            "CPU times: user 27.5 s, sys: 1.77 s, total: 29.3 s\n",
+            "Wall time: 36 s\n"
           ],
           "name": "stdout"
         }
@@ -547,7 +654,7 @@
         "fig.update_layout(mapbox_accesstoken=mapboxtoken)\n",
         "fig.show()"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -609,32 +716,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gFZz74KO6S2L",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "PwdvcDyu6TCk",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
