Results file format changed

--- a/pol_pred.ipynb
+++ b/pol_pred.ipynb
@@ -6,6 +6,7 @@
       "name": "pol_pred.ipynb",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,11 +96,7 @@
       "metadata": {
         "id": "Tvg6m9_03QqU",
         "colab_type": "code",
-        "outputId": "e094f490-09c9-4609-9636-a7ba7a779377",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "source": [
         "#Import libraries\n",
@@ -120,15 +117,7 @@
         "from sklearn.model_selection import cross_val_score, train_test_split"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -151,31 +140,14 @@
       "metadata": {
         "id": "qZSLmE7l3XsO",
         "colab_type": "code",
-        "outputId": "099725dd-1e2f-48d0-c3b3-e5f87bcaae28",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 119
-        }
+        "colab": {}
       },
       "source": [
         "#Clone github repository\n",
         "!git clone https://github.com/drcolula/mtypollution.git"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Cloning into 'mtypollution'...\n",
-            "remote: Enumerating objects: 25, done.\u001b[K\n",
-            "remote: Counting objects: 100% (25/25), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (24/24), done.\u001b[K\n",
-            "remote: Total 25 (delta 6), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (25/25), done.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -238,7 +210,7 @@
         "colab": {}
       },
       "source": [
-        "#Create station parameters dataset\n",
+        "#Create station parameters dataset, dropping Rain and Solar Radiation, per the results of the correlation analysis\n",
         "dc=ds['s1'].drop(['RAIN','SR'], axis=1)\n",
         "for i in range(2,9):\n",
         "  s=str(i)\n",
@@ -247,6 +219,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2WhCrVaNHjLf",
+        "colab_type": "text"
+      },
+      "source": [
+        "#Model Training"
+      ]
     },
     {
       "cell_type": "code",
@@ -261,16 +243,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2WhCrVaNHjLf",
-        "colab_type": "text"
-      },
-      "source": [
-        "#Model Training"
-      ]
     },
     {
       "cell_type": "code",
@@ -331,11 +303,7 @@
       "metadata": {
         "id": "9M6r63k03Yco",
         "colab_type": "code",
-        "outputId": "67fd9ac5-a838-4387-f086-7329f468103d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 136
-        }
+        "colab": {}
       },
       "source": [
         "#Append PM10 values of target station\n",
@@ -344,21 +312,7 @@
         "    db['PM10obj'].iloc[i]=ds[db.Target.iloc[i]].loc[db.index[i]].PM10"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/pandas/core/indexing.py:671: SettingWithCopyWarning:\n",
-            "\n",
-            "\n",
-            "A value is trying to be set on a copy of a slice from a DataFrame\n",
-            "\n",
-            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-            "\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -573,44 +527,27 @@
       "metadata": {
         "id": "GRBh-sm93Yxw",
         "colab_type": "code",
-        "outputId": "d0c87be9-2e58-475d-b567-fc1028d79e44",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        }
+        "colab": {}
       },
       "source": [
         "#Create grid\n",
-        "w=300\n",
-        "h=150\n",
+        "w=250\n",
+        "h=125\n",
         "(cc,co)=meshing(w,h)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "CPU times: user 3min 6s, sys: 33.6 ms, total: 3min 6s\n",
-            "Wall time: 3min 6s\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "LL4TbjkC3Yz5",
         "colab_type": "code",
-        "outputId": "735039da-c163-462e-9970-48225da03f4f",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        }
+        "colab": {}
       },
       "source": [
-        "#Predict points in the mesh for the n first hours and save the result\n",
-        "n=10000\n",
+        "#Predict points in the mesh for the n first hours and save the result in a csv file\n",
+        "n=10\n",
         "\n",
         "mod=load_model('mtypollution/mods_ModGNormF128.hdf5')\n",
         "    \n",
@@ -618,21 +555,12 @@
         "    dd=pd.concat([dc.iloc[i,:]]*(w*h),axis=1).T\n",
         "    ff=pd.concat([dd.reset_index(),cc.drop('coor',axis=1).reset_index()],axis=1).drop('index',axis=1)\n",
         "    pred=mod.predict(ff)\n",
-        "    co['PM10']=pred\n",
-        "    co['hr']=list(dc.index)[i]\n",
-        "    co.to_csv('maps/' + str(dc.index[i]).replace(':','-') + '.csv',index=False)"
+        "\n",
+        "    co['PM10'+'_'+str(dc.index[i])]=pred\n",
+        "co.to_csv('maps/maps.csv',index=False)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "CPU times: user 27.5 s, sys: 1.77 s, total: 29.3 s\n",
-            "Wall time: 36 s\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
